// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute okxAssetsAddress should return error when data source returns error 1`] = `
{
  "errorMessage": "Error code 50001: Internal server error",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute okxAssetsAddress should return success for lockAddresses 1`] = `
{
  "data": {
    "result": [
      {
        "address": "bc1qlock1abc",
        "chainId": "mainnet",
        "network": "bitcoin",
      },
      {
        "address": "bc1qlock2def",
        "chainId": "mainnet",
        "network": "bitcoin",
      },
    ],
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute okxAssetsAddress should return success for stakingBalanceDetails 1`] = `
{
  "data": {
    "result": [
      {
        "address": "bc1qstaking1xyz",
        "chainId": "mainnet",
        "network": "bitcoin",
      },
      {
        "address": "bc1qstaking2uvw",
        "chainId": "mainnet",
        "network": "bitcoin",
      },
    ],
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
